# gltut

./: CMakeLists.txt  README.md  gltut.sln
Resources/Models/: floorVertices.csv
Resources/Shaders/: fragment.glsl  lightFragment.glsl  spherefragment.glsl  spherevertex.glsl  vertex.glsl
gltut/: GLError.cpp  GLError.h  ObjectManager.cpp  ObjectManager.h  RenderInstance.h  ResourceManager.h  camera.h  game.h  gltut.vcxproj  gltut.vcxproj.filters  helper.h  light.h  main.cpp  shader.h  texture.h
gltut/Resources/Models/: ObjectManager.h  cubeVertices.csv
gltut/Resources/Shaders/: fragment.glsl  lightFragment.glsl  lightVertex.glsl  vertex.glsl
src/: ObjectManager.h  game.h  helper.h  main.cpp  mouse.h  shader.h  sphere.h  texture.h
